@startuml
class User {
    +UUID id
    +string name
    +string email
    +string passwordHash
    +[]UUID watchLater
    +time createdAt
    +time updatedAt
}

class Movie {
    +UUID id
    +string title
    +string description
    +string genre
    +int releaseYear
    +string thumbnailUrl
    +float ratingAvg
    +time createdAt
}

class Review {
    +UUID id
    +UUID userId
    +UUID movieId
    +float rating
    +time createdAt
}

class Comment {
    +UUID id
    +UUID userId
    +UUID movieId
    +string text
    +time createdAt
}

class Recommendation {
    +UUID id
    +UUID userId
    +UUID movieId
    +float score
    +string algorithm
}

class Statistic {
    +UUID userId
    +int moviesWatched
    +int commentsAdded
    +float avgRatingGiven
}

' Relationships
User "1" -- "0..*" Review : creates >
User "1" -- "0..*" Comment : writes >
User "1" -- "0..*" Recommendation
User "1" -- "0..1" Statistic
Movie "1" -- "0..*" Review : has >
Movie "1" -- "0..*" Comment : has >
Movie "1" -- "0..*" Recommendation
@enduml
